--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <!--DIV TEST-->
+    <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, itaque?</div>
     
 </body>
 </html>
