cambio 2 de div

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <!--DIV TEST-->
-    <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, itaque?</div>
+    <!--DIV TEST 2-->
+    <div class="Pepe">Lorem ipsum dolor sit amet.</div>
     
 </body>
 </html>
